--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img width="200" src="karan.jpg" alt=""></td>
+      <td><img width="200" src="karan.jpg" alt="Karanbir Singh"></td>
       <td>
         <h2>Karanbir Singh</h2>
         <p><em>Student at <strong>MJC</strong>.</em></p>
