--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img width="200" src="" alt="Karanbir Singh"></td>
+      <td><img width="200" src="681DD8F0-114E-4C6F-82F9-6555A7D29E65_1_201_a.jpeg" alt="Karanbir Singh"></td>
       <td>
         <h2>Karanbir Singh</h2>
         <p><em>Student at <strong>MJC</strong>.</em></p>
