--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img width="200" src="681DD8F0-114E-4C6F-82F9-6555A7D29E65_1_201_a.jpeg" alt="Karanbir Singh"></td>
-      <td>
+      <td><img width="200" src="src="KaranG.jpeg" alt="Karanbir Singh"></td>
+
+  <td>
         <h2>Karanbir Singh</h2>
         <p><em>Student at <strong>MJC</strong>.</em></p>
         <p><em>Major in <strong><a href="https://www.google.com/search?q=business+administration&rlz=1C5CHFA_enUS778US778&oq=business+a&aqs=chrome.1.69i57j0l7.5840j0j7&sourceid=chrome&ie=UTF-8">Business Administartion</a></strong>.</em></p>
