--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img width="200" src="src="KaranG.jpeg" alt="Karanbir Singh"></td>
+      <td><img width="200" src="src="Gill.jpeg" alt="Karanbir Singh"></td>
 
   <td>
         <h2>Karanbir Singh</h2>
