--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       <td>
         <table cellspacing= "10">
           <tr>
-            <td>Leadership</td>
+            <td>Photography</td>
             <td>⭐️⭐️⭐️⭐️⭐️</td>
           </tr>
-          <td>Managing</td>
-          <td>⭐️⭐️⭐️⭐️</td>
+          <td>Programming</td>
+          <td>⭐️⭐️</td>
         </table>
       </td>
     </tr>
