--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <table>
     <tr>
       <td>
-        <table cellspacing= "10">
+        <table Cellspacing= "10">
           <tr>
             <td>Leadership</td>
             <td>⭐️⭐️⭐️⭐️⭐️</td>
